class RxWorker and execute testing done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
-    implementation "androidx.room:guava-rxjava3:$room_version"
+    implementation "androidx.room:room-guava:$room_version"
 
 
     //https://github.com/google/dagger
